<resources>
    <string name="app_name">My Movie Memoir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Movie Memoir</string>
    <string name="nav_header_subtitle">By Cheng Ma</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_memoir">Memoir</string>
    <string name="menu_watchlist">Watch List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="welcome">Welcome to My Movie Memoir!</string>
    <string name="date">Current date</string>
    <string name="today">Today is </string>
    <string name="top5">Recent favorate movies</string>
    <string name="placeholder"> Unknown </string>
    <string name="rd1">Release date:</string>
    <string name="s1">Score:</string>
    <string name="search_hint">movie name</string>
    <string name="input_pre">Input the movie name below:</string>
    <string name="results_title">Search Results</string>
    <string name="release_year">Release date:</string>
    <string name="menu_movieview">Movie view</string>
    <string name="country">Country:</string>
    <string name="genre">Genre:</string>
    <string name="directors">Directors:</string>
    <string name="cast">Cast:</string>
    <string name="rating">Rating:</string>
    <string name="add_to_memoir">Add to memoir</string>
    <string name="add_to_watch_list">Add to watch list</string>
    <string name="storyline">Storyline:</string>
    <string name="view">view</string>
    <string name="delete">Delete</string>
    <string name="add_time">Add time:</string>
    <string name="added">Added</string>
    <string name="menu_report">Report</string>
    <string name="menu_map">Map</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort by:</string>
    <string name="close">close</string>
    <string name="comment">Comment:</string>
    <string name="add_new_cinema">Add New Cinema</string>
    <string name="cinema">Cinema:</string>
    <string name="choose_time">Choose time</string>
    <string name="watch_time">Watch time:</string>
    <string name="choose_date">Choose Date</string>
    <string name="watch_date">Watch date:</string>
    <string name="user_experience">User Experience</string>
    <string name="in_year">In year:</string>
    <string name="movies_wathed_in_months">Movies wathed in months</string>
    <string name="submit">Submit</string>
    <string name="end_date">End date:</string>
    <string name="select">select</string>
    <string name="start_date">Start date:</string>
    <string name="movies_watched_in_areas">Movies watched in areas</string>
    <string name="my_movie_memoir">My Movie Memoir</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="menu_logout">logout</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="first_name">First name:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="address">Address:</string>
    <string name="state">State:</string>
    <string name="postcode">Postcode:</string>
    <string name="last_name">Last name:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="secret">Secret</string>

</resources>
